fix(AsideHeader/CustomBackground)!: fix stretching background (#362)

--- a/src/components/AsideHeader/__stories__/AsideHeaderShowcase.scss
+++ b/src/components/AsideHeader/__stories__/AsideHeaderShowcase.scss
@@ -85,8 +85,6 @@ body {
     }
 
     &__custom-background {
-        width: 100%;
-
         opacity: 70%;
     }
 }
